# llm-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: 01.1_sentiment_analysis.py  01_sentiment_analysis.py  02.1_news_classification.py  02_news_classification.py  03_survey_clustering.py  README.md
src/llm_classifier/: __init__.py  classifier.py  cluster.py  prompt_utils.py
tests/: __init__.py  test_classifier.py  test_cluster.py
