[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-classifier"
version = "0.1.2"
description = "Structured LLM based classification, clustering and extraction framework that works with all major API providers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Fir121", email = "" }]
keywords = ["llm", "classification", "clustering", "pydantic", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "instructor>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Fir121/llm-classifier"
Repository = "https://github.com/Fir121/llm-classifier"
Issues = "https://github.com/Fir121/llm-classifier/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_classifier"]